# BinanceTraderBot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: python.yml
TradingBotTV/: AGENTS.md  gui_panel.py
TradingBotTV/bot/: AGENTS.md  AppLifetime.cs  BinanceTrader.cs  BinanceTraderBot.csproj  BinanceWebSocket.cs  BotController.cs  BotLogger.cs  ConfigManager.cs  DashboardServer.cs  OptimizerRunner.cs  OrderBookFeed.cs  PositionSizer.cs  Program.cs  PythonDatabaseBridge.cs  StrategyEngine.cs  SymbolScanner.cs  TradeLogger.cs  TradingViewWebSocket.cs  WebhookServer.cs
TradingBotTV/config/: settings.json
TradingBotTV/ml_optimizer/: AGENTS.md  __init__.py  advanced_rl.py  alerts.py  analytics.py  arbitrage.py  auto_ml.py  auto_optimizer.py  backtest.py  compare_strategies.py  data_fetcher.py  database.py  db_cli.py  deep_rl_examples.py  execution.py  expert_ai.py  fundamental.py  github_strategy_simulator.py  hedging.py  hft.py  logger.py  ml_models.py  monitor.py  network_utils.py  optimizer.py  options.py  order_manager.py  orderbook.py  paper_trading.py  portfolio.py  requirements.txt  resource_manager.py  risk.py  rl_optimizer.py  sentiment.py  signal_handler.py  solana_ai.py  state_utils.py  strategies.py  tradingview_auto_trader.py  (+3 more)
TradingBotTV/ml_optimizer/data/: BTCUSDT_1h.csv  SOLUSDC_1h.csv
TradingBotTV/ml_optimizer/tests/: test_advanced_rl.py  test_alerts.py  test_analytics.py  test_arbitrage.py  test_hft.py  (+42 more)
docs/: AGENTS.md  README_pl.md  discord.md  repo_analysis.md
scripts/: build_installer.py
